# OMBRA-PROJECT

./: .gitignore  .mcp.json.template  CLAUDE copy.MD  CLAUDE.MD  DRIVER_MCP.MD  DRIVER_RE_COMPLETE.md  MCP-INTEGRATION-GUIDE.md  MCP-QUICK-REFERENCE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  setup.sh
.claude/agents/: documentation-expert.md  mcp-expert.md  mcp-server-architect.md  technical-researcher.md
.claude/commands/: debug.md
.github/workflows/: build.yml
docs/: SPEC.md
docs/additional-research-1/: A2_INTEL_VIRT_KNOWLEDGE.md  DETECTION_VECTORS.md  TECHNIQUE_DATABASE.md
docs/additional-research-2/: A10_DETECTION_KNOWLEDGE.md  (+4 more)
driver-re-mcp/: .env.example  .gitignore  CLAUDE.md  DELIVERY.md  IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  TESTING_CHECKLIST.md  TOOLS_REFERENCE.md  pyproject.toml  test_database.py  test_simple_db.py
driver-re-mcp/docs/: SCANNER_TOOLS_REFERENCE.md  scanner_integration.md
driver-re-mcp/examples/: scanner_batch_example.json  scanner_single_example.json
driver-re-mcp/scripts/: init_db.py  seed_categories.py  test_server.py
driver-re-mcp/src/driver_re_mcp/: __init__.py  config.py  models.py  server.py
driver-re-mcp/src/driver_re_mcp/database/: README.md  __init__.py  connection.py  models.py  schema.py  schema.sql
driver-re-mcp/src/driver_re_mcp/embeddings/: __init__.py  chromadb_provider.py  provider.py
driver-re-mcp/src/driver_re_mcp/ghidra/: __init__.py  bridge.py
driver-re-mcp/src/driver_re_mcp/parsers/: __init__.py  pe_parser.py  string_parser.py
driver-re-mcp/src/driver_re_mcp/tools/: __init__.py  analysis_tools.py  driver_tools.py  export_tools.py  function_tools.py  ghidra_tools.py  import_tools.py  ioctl_tools.py  search_tools.py  struct_tools.py  vuln_tools.py  xref_tools.py
driver-re-mcp/src/driver_re_mcp/utils/: __init__.py  address.py  hashing.py
hypervisor/: .gitignore  CLAUDE.md  EPT_SPLITTING_COMPLETE.md  EPT_SPLITTING_QUICK_REF.md  EPT_STEALTH_AUDIT_REPORT.md  PAT_IMPLEMENTATION.md  README.md  SHADOW_HOOKS_FILES.txt  SHADOW_HOOKS_IMPLEMENTATION.md  test_ept_split.c  test_rdtscp.c
hypervisor/usermode/gui/: CMakeLists.txt
hypervisor/usermode/gui/src/: app.cpp  app.h  auth.cpp  auth.h  dx11_backend.cpp  dx11_backend.h  main.cpp  spoofer_ui.cpp  spoofer_ui.h
ombra_mcp_server/: AMD_EVASION_GUIDE.md  AUDIT_REPORT.md  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  CODE_GENERATOR_ENHANCEMENT.md  COMPONENT_TRACKING.md  CONCEPT_INTELLIGENCE.md  FTS5_MIGRATION.md  FTS5_QUICK_REFERENCE.md  HYPERV_ENLIGHTENMENT_DOCS.md  MSR_DATABASE_UPDATE.md  README.md  SDM_QUERY_FIXES.md  TOOL_AUDIT.md  demo_hyperv_usage.py  demo_project_awareness.py  pyproject.toml  setup.sh  test_audit.py  test_code_generator.py  test_hyperv_stealth.py  test_status_summary.py
ombra_mcp_server/docs/: DRIVER_RE_BUILD_SUMMARY.md  DRIVER_RE_QUICK_REF.md  DRIVER_RE_TOOLS.md  MCP_REFACTOR_DESIGN.md
ombra_mcp_server/scripts/: add_critical_msrs.py  add_fts5_indexes.py  create_new_databases.py  extract_concepts.py  fts5_examples.py  ingest_mslearn.py  init_driver_re_db.py  init_mslearn_db.py  init_vergilius_db.py  migrate_gotchas.py  normalize_msr_categories.py  populate_vmx_controls.py  prepare_intel_sdm.py  priority_pages.txt  scrape_vergilius.py  seed_components.py  seed_concepts.py  test_driver_re_tools.py  test_fts5.py
ombra_mcp_server/src/ombra_mcp/: __init__.py  server.py
ombra_mcp_server/src/ombra_mcp/data/: amd_cpuid.json  anticheat_intel.db  byovd_drivers.db  detection_vectors.json  driver_re.db  evasion_techniques.db  hyperv_enlightenments.json  intel_sdm.db  ld9boxsup_ioctls.json  mslearn_reference.db  signatures.json  vergilius.db  vmcs_fields.h
ombra_mcp_server/src/ombra_mcp/data/chroma/2d7c6082-dc8e-4720-af9f-cc9c547a9c4c/: index_metadata.pickle
ombra_mcp_server/src/ombra_mcp/data/chroma/40124529-da1e-436f-951d-f04e80b776e3/: index_metadata.pickle
ombra_mcp_server/src/ombra_mcp/data/chroma/8cd00e64-6af6-487e-9a31-efef62246012/: index_metadata.pickle
ombra_mcp_server/src/ombra_mcp/tools/: __init__.py  anticheat_db.py  anticheat_intel.py  binary_scanner.py  byovd.py  byovd_db.py  code_generator.py  concepts.py  driver_mapper.py  driver_re_db.py  driver_tools.py  evasion_db.py  export_tools.py  hvci_bypass.py  import_tools.py  ioctl_tools.py  mslearn_db.py  project_brain.py  sdm_query.py  semantic_search.py  stealth.py  timing_simulator.py  vergilius.py  vmcs_validator.py
ombra_mcp_server/src/ombra_watcherd/: __init__.py  __main__.py  concepts.db  concepts_db.py  daemon.py  database.py  launchd.py
ombra_mcp_server/src/ombra_watcherd/analyzers/: __init__.py  base.py  concept.py  consistency.py  hypervisor.py  security.py
ombra_mcp_server/src/ombra_watcherd/extractors/: __init__.py  doc_parser.py
ombra_mcp_server/tests/: __init__.py  test_concept_analyzer.py  test_concepts_db.py  test_doc_parser.py  test_integration.py
project-docs/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  INDEX.md
project-mcp-server/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_NOTE.md  README.md  TOOL_REFERENCE.md  pyproject.toml
project-mcp-server/dashboard/: start.sh
project-mcp-server/dashboard/backend/: main.py
project-mcp-server/dashboard/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
project-mcp-server/dashboard/frontend/src/: App.jsx  index.css
project-mcp-server/docs/: DRIVER_TOOLS.md
project-mcp-server/docs/plans/: 2025-12-27-memhv-parity-design.md
project-mcp-server/src/project_mcp/: __init__.py  database.py  parser.py  server.py
project-mcp-server/src/project_mcp/data/: schema.sql
project-mcp-server/src/project_mcp/tools/: __init__.py  analysis_tools.py  component_tools.py  dashboard_tools.py  driver_tools.py  feature_tools.py  file_tools.py  function_tools.py  impact_tools.py  stub_tools.py  task_tools.py
prompts/: OmbraHypervisor_Claude_Code_Prompt.md  OmbraHypervisor_Claude_Code_Prompt_MCP.md  claude_generator.md  codebase_generator.md
(+898 files in other folders)
