[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driver-re-mcp"
version = "1.0.0"
description = "MCP server for Windows kernel driver reverse engineering"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "chromadb>=0.4.0",
    "pefile>=2023.2.7",
    "httpx>=0.25.0",
]

[project.scripts]
driver-re-mcp = "driver_re_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/driver_re_mcp"]
