[project]
name = "ombra-mcp"
version = "2.1.0"
description = "Hypervisor Development MCP Server with Project Brain and Concept Intelligence for OmbraHypervisor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ombra_mcp", "src/ombra_watcherd"]

[project.scripts]
ombra-mcp = "ombra_mcp.server:main"
ombra-watcherd = "ombra_watcherd.__main__:main"
